--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   </body>
 
   <footer>
-    Created by <a href="http://muhammadyaqoob.ml">Muhammad Yaqoob</a>😊
+
+    Created by <a href="http://muhammadyaqoob.ml">Muhammad Yaqoob</a>😊.
   </footer>
 </html>
